--- a/userpage.css
+++ b/userpage.css
@@ -21,7 +21,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background: url(/pictures/bg.jpg); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,7 +36,6 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    /* background: rgb(248, 155, 15); */
     border-radius: 5px 5px 0 0;
     padding: 20px;
 }
@@ -52,19 +50,33 @@ body{
     align-items: center;
     padding: 10px;
 }
+
 .brand h3{
     font-family: "Caveat", cursive;
-    /* font-optical-sizing: auto; */
     font-weight: 700;
     font-style: normal;
 }
-.brand button{
-    margin-left: 50%;
-    height: 40px;
-    width: 5%;
+
+.brand input{
+    width: 30%;
+    height: 40%;
+    border-radius: 5px;
     border: none;
-    border-radius: 50px 50px 50px 50px;
-    color: white;
+    padding: 10px;
+    font-size: 16px;
+    transition: all 0.5s ease;
+}
+.brand input:hover{
+    background: rgb(51, 51, 51);
+    box-shadow: 3px 3px 5px rgb(104, 104, 104);
+}
+
+.brand button{
+    margin-left: auto;
+    height: 40px;
+    width: 40px;
+    border: none;
+    border-radius: 50px;
     background: none;
     transition: all 0.5s ease;  
 }
@@ -76,7 +88,6 @@ body{
     transform: translateX(5%);
     box-shadow: 3px 3px 5px rgb(104, 104, 104);
 }
-
 
 .bottom{
     height: 80%;
@@ -101,57 +112,43 @@ body{
     gap: 10px;
 }
 
-.form{
-    width: 50%;
-    height: 40%;
-    border: none;
-    border-radius: 5px;
-    background: rgb(248, 155, 15);
+.description .searchForm{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    padding: 30px;
-    box-shadow: 3px 3px 5px rgb(104, 104, 104);
-    font-family: Arial, Helvetica, sans-serif;
+    flex-direction: row;
+    gap: 5px;
 }
-
-.form input{
-    width: 80%;
-    height: 30%;
+.description .searchForm input{
+    height: 40%;
     border-radius: 5px;
     border: none;
     color: white;
     font-weight: 500;
     background: black;
     padding: 10px;
-    transition: all 0.5s ease;
 }
-.form input:hover{
-    /* transform: translateX(1%); */
+.description .searchForm input:hover{
     background: rgb(51, 51, 51);
     box-shadow: 3px 3px 5px rgb(104, 104, 104);
 }
-
-.form button{
-    width: 20%;
-    height: 38px;
+.description .searchForm button{
+    height: 40%;
+    width: 50%;
+    padding: 10px;
     border: none;
     border-radius: 5px;
-    background: rgb(73, 73, 73);
     color: white;
+    background: rgb(73, 73, 73);
     transition: all 0.5s ease;
 }
-.form button:hover{
-    background: rgb(149, 201, 198);
-    font-weight: 600;
-    transform: translateY(5%);
-    box-shadow: 3px 3px 5px rgb(104, 104, 104);
-    cursor: pointer;
-}
 
-.bottom .items{
+.description .searchForm button:hover{
+    background: rgb(149, 201, 198);
+    color: black;
+    font-weight: 600;
+    transform: translateX(5%);
+    box-shadow: 3px 3px 5px rgb(104, 104, 104);
+}
+.items{
     display: flex;
     flex-wrap: wrap;
     width: 70%;
@@ -173,15 +170,14 @@ body{
     border-radius: 5px;
     font-family: "Josefin Sans", sans-serif;
     font-weight: 600;
-    /* font-optical-sizing: auto; */
     font-style: normal;
     background: rgb(149, 201, 198);
     box-shadow: 3px 3px 5px rgb(104, 104, 104);
     transition: all 0.7s ease-in;
 }
+
 .items .itemCont:hover{
     transform: translateX(5%);
-
 }
 
 .items .itemCont button{
@@ -195,15 +191,8 @@ body{
     transition: all 0.5s ease;
 }
 
-.items .itemCont .updateBtn:hover{
+.items .itemCont .addToCartBtn:hover{
     background: rgb(248, 155, 15);
-    font-weight: 600;
-    transform: translateY(5%);
-    box-shadow: 3px 3px 5px rgb(104, 104, 104);
-    cursor: pointer;
-}
-.items .itemCont .deleteBtn:hover{
-    background: rgb(250, 72, 72);
     font-weight: 600;
     transform: translateY(5%);
     box-shadow: 3px 3px 5px rgb(104, 104, 104);
@@ -214,122 +203,51 @@ body{
     border-radius: 5px;
 }
 
-.error{
-    width: 30%;
-    font-weight: 700;
-    color: rgb(250, 72, 72);
-    font-family: "Josefin Sans", sans-serif;
-    background: white;
-    padding: 5px;
-    border-radius: 5px;
+.success{
+    width: 100%;
     display: flex;
     justify-content: center;
-    /* box-shadow: 3px 3px 3px rgb(156, 156, 156); */
-}
-
-.searchForm{
-    display: flex;
-    gap: 5px;
-}
-.searchForm button{
-    height: 40px;
-    width: 50%;
+    align-items: center;
+    color: white;
     padding: 10px;
-    border: none;
+    font-weight: 700;
+    background: rgb(45, 253, 80);
     border-radius: 5px;
-    color: white;
-    background: rgb(73, 73, 73);
-    transition: all 0.5s ease;
 }
-
-.searchForm button:hover{
-    background: rgb(149, 201, 198);
-    color: white;
-    font-weight: 600;
-    transform: translateX(5%);
-    box-shadow: 3px 3px 5px rgb(104, 104, 104);
-}
-
-.searchForm input{
-    /* width: 80%; */
-    height: 40%;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    font-weight: 500;
-    background: black;
-    padding: 10px;
-    transition: all 0.5s ease;
-}
-
-.searchForm input:hover{
-    background: rgb(51, 51, 51);
-    box-shadow: 3px 3px 5px rgb(104, 104, 104);
-}
-
 
 /* Media Queries */
 @media (max-width: 1200px) {
-    .form {
-        width: 60%;
-    }
-
     .brand {
         flex-direction: column;
         font-size: 30px;
     }
 
+    .brand input {
+        width: 70%;
+    }
+
     .brand button {
         margin-left: 0;
-        width: 50%;
+        width: 50px;
     }
 }
 
 @media (max-width: 768px) {
-    .form {
-        width: 80%;
-    }
-
-    .form input {
-        width: 90%;
-        height: auto;
-        padding: 5px;
-    }
-
-    .form button {
-        width: 50%;
-    }
-
     .brand {
         font-size: 25px;
     }
 
-    .description {
-        font-size: 20px;
+    .brand input {
+        width: 80%;
     }
 }
 
 @media (max-width: 480px) {
-    .form {
-        width: 100%;
-        padding: 20px;
-    }
-
-    .form input {
-        width: 100%;
-        height: auto;
-        padding: 5px;
-    }
-
-    .form button {
-        width: 60%;
-    }
-
     .brand {
         font-size: 20px;
     }
 
-    .description {
-        font-size: 18px;
+    .brand input {
+        width: 90%;
     }
 }
