--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
     font-size: 40px;
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 15px;
     align-items: center;
     padding: 10px;
 }
@@ -59,14 +59,22 @@ body{
     font-style: normal;
 }
 .brand button{
-    margin-left: 50%;
+    margin-left: auto;
     height: 40px;
     width: 5%;
     border: none;
     border-radius: 50px 50px 50px 50px;
-    color: white;
+    color: black;
     background: none;
     transition: all 0.5s ease;  
+}
+
+.brand #home{
+    margin-right: auto;
+    color: black;
+}
+.brand #home:hover{
+    color: white;
 }
 
 .brand button:hover{
@@ -75,6 +83,7 @@ body{
     font-weight: 600;
     transform: translateX(5%);
     box-shadow: 3px 3px 5px rgb(104, 104, 104);
+    cursor: pointer;
 }
 
 
@@ -248,6 +257,7 @@ body{
     font-weight: 600;
     transform: translateX(5%);
     box-shadow: 3px 3px 5px rgb(104, 104, 104);
+    cursor: pointer;
 }
 
 .searchForm input{
