--- a/cart.css
+++ b/cart.css
@@ -24,6 +24,25 @@
     border-radius: 5px;
 }
 
+.top h3 #back{
+    height: 30px;
+    width: 30px;
+    padding: 10px;
+    border: none;
+    border-radius: 50px;
+    color: white;
+    background: rgb(73, 73, 73);
+    transition: all 0.5s ease;
+}
+.top h3 #back:hover{
+    background: rgb(149, 201, 198);
+    color: white;
+    font-weight: 600;
+    transform: translateX(5%);
+    box-shadow: 3px 3px 5px rgb(104, 104, 104);
+    cursor: pointer;
+}
+
 .container .top{
     height: 20%;
     width: 100%;
@@ -44,6 +63,8 @@
     font-weight: 700;
     font-style: normal;
     font-size: 40px;
+    display: flex;
+    gap: 20px;
 }
 
 .bottom{
@@ -58,7 +79,7 @@
     /* background: rgb(149, 201, 198); */
 }
 
-.bottom button{
+.bottom #checkout{
     width: 10%;
     height: 10%;
     border: none;
@@ -68,12 +89,22 @@
     padding: 10px;
     transition: all 0.5s ease;
 }
+.bottom #checkout:hover{
+    background: rgb(45, 253, 80);
+    color: black;
+    font-weight: 600;
+    transform: translateY(5%);
+    box-shadow: 3px 3px 5px rgb(104, 104, 104);
+    cursor: pointer;
+}
 
 .bottom .cart-items{
     display: flex;
     flex-wrap: wrap;
-    width: 70%;
+    width: fit-content;
     height: fit-content;
+    justify-content: center;
+    align-items: center;
     gap: 40px;
     padding: 20px;
     border-radius: 5px;
@@ -97,11 +128,11 @@
     transition: all 0.7s ease-in;
 }
 
-.bottom .cart-items .itemCont:hover{
+/* .bottom .cart-items .itemCont:hover{
     transform: translateX(5%);
-}
+} */
 .bottom .cart-items .itemCont button{
-    width: 60%;
+    width: fit-content;
     height: 20%;
     border: none;
     border-radius: 5px;
@@ -111,7 +142,8 @@
     transition: all 0.5s ease;
 }
 .bottom .cart-items .itemCont button:hover{
-    background: rgb(248, 155, 15);
+    background: rgb(250, 72, 72);
+    color: black;
     font-weight: 600;
     transform: translateY(5%);
     box-shadow: 3px 3px 5px rgb(104, 104, 104);
@@ -122,7 +154,7 @@
     border-radius: 5px;
 }
 .top .checkout{
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -130,5 +162,17 @@
     padding: 10px;
     font-weight: 700;
     background: rgb(45, 253, 80);
+    border-radius: 5px;
+}
+
+.top .checkout1{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 10px;
+    font-weight: 700;
+    background: rgb(250, 72, 72);
     border-radius: 5px;
 }
